@@ -44,6 +44,10 @@
 #include "ops.h"
 #include "debug.h"
 
+
+#define spacep(p)   (*(p) == ' ' || *(p) == '\t')
+
+
 
 struct key_queue_item_s
 {
@@ -69,6 +73,10 @@ typedef struct
   /* This points to the last sig in tmp_uid.  */
   gpgme_key_sig_t tmp_keysig;
 
+  /* Helper with a malloced uppercased fingerprint without '!' to be
+   * used to set the subkey_match flag.  */
+  char *requested_subkey;
+
   /* Something new is available.  */
   int key_cond;
   struct key_queue_item_s *key_queue;
@@ -86,6 +94,9 @@ release_op_data (void *hook)
 
   /* opd->tmp_uid and opd->tmp_keysig are actually part of opd->tmp_key,
      so we do not need to release them here.  */
+
+  if (opd->requested_subkey)
+    free (opd->requested_subkey);
 
   while (key)
     {
@@ -1207,6 +1218,64 @@ _gpgme_op_keylist_event_cb (void *data, gpgme_event_io_t type, void *type_data)
 }
 
 
+/* Return true if PATTERN requests an extackt match.  That is a
+ * sequence of at least 40 hexdigits followed by an exclamation mark
+ * and nothing else.  Returns a pointer to the first hexdigit or
+ * NULL.  */
+static const char *
+exact_match_pattern (const char *pattern)
+{
+  const char *s;
+  int hexlen;
+  const char *start;
+
+  for(s = pattern; *s && spacep (s); s++ )  /* Skip spaces.  */
+    ;
+  if (s[0] == '0' && s[1] == 'x')  /* Skip an optional "0x" prefix.  */
+    s += 2;
+  start = s;
+  hexlen = strspn (s, "0123456789abcdefABCDEF");
+  if (hexlen >= 40 && s[hexlen] == '!')
+    {
+      s += hexlen+1;
+      /* Skip trailing spaces and LFs.  */
+      for (; *s && (spacep (s) || *s == '\n' || *s == '\r'); s++ )
+        ;
+      if (!*s) /* Only spaces seen.  */
+        return start;
+    }
+  return NULL;
+}
+
+
+/* Helper for gpgme_op_keylist_start and ..._start_ext.  */
+static gpg_error_t
+maybe_setup_for_requested_subkey (op_data_t opd, const char *pattern)
+{
+  const char *s;
+  char *p;
+
+  if (pattern && (s=exact_match_pattern (pattern)))
+    {
+      free (opd->requested_subkey);
+      p = opd->requested_subkey = strdup (s);
+      if (!p)
+        return gpg_error_from_syserror ();
+      for (; *p; p++ )
+        {
+          if (*p >= 'a' && *p <= 'z')
+            *p &= ~0x20;  /* Upcase it.  */
+          else if (*p == '!') /* Remove the '!' suffix and stop.  */
+            {
+              *p = 0;
+              break;
+            }
+        }
+    }
+  return 0;
+}
+
+
 /* Start a keylist operation within CTX, searching for keys which
    match PATTERN.  If SECRET_ONLY is true, only secret keys are
    returned.  */
@@ -1230,6 +1299,10 @@ gpgme_op_keylist_start (gpgme_ctx_t ctx, const char *pattern, int secret_only)
   err = _gpgme_op_data_lookup (ctx, OPDATA_KEYLIST, &hook,
 			       sizeof (*opd), release_op_data);
   opd = hook;
+  if (err)
+    return TRACE_ERR (err);
+
+  err = maybe_setup_for_requested_subkey (opd, pattern);
   if (err)
     return TRACE_ERR (err);
 
@@ -1276,6 +1349,22 @@ gpgme_op_keylist_ext_start (gpgme_ctx_t ctx, const char *pattern[],
   opd = hook;
   if (err)
     return TRACE_ERR (err);
+
+  if (pattern && pattern[0])
+    {
+      int i;
+
+      for (i=0; pattern[i]; i++)
+        {
+          err = maybe_setup_for_requested_subkey (opd, pattern[i]);
+          if (err)
+            return TRACE_ERR (err);
+          /* We can only handle one exact subnkey request.  Thus we
+           * stop after the first seen.  */
+          if (opd->requested_subkey)
+            break;
+        }
+    }
 
   err = _gpgme_op_import_init_result (ctx);
   if (err)
@@ -1377,6 +1466,16 @@ gpgme_op_keylist_next (gpgme_ctx_t ctx, gpgme_key_t *r_key)
 
   *r_key = queue_item->key;
   free (queue_item);
+
+  if (opd->requested_subkey && (*r_key)->subkeys && (*r_key)->subkeys->fpr)
+    {
+      /* Time to set the mark.  */
+      gpgme_subkey_t subkey = (*r_key)->subkeys;
+
+      for (; subkey; subkey = subkey->next)
+        if (subkey->fpr && !strcmp (subkey->fpr, opd->requested_subkey))
+          subkey->subkey_match = 1;
+    }
 
   TRACE_SUC ("key=%p (%s)", *r_key,
              ((*r_key)->subkeys && (*r_key)->subkeys->fpr) ?
